re-setup basic scss structure

--- a/src/style/_config.scss
+++ b/src/style/_config.scss
@@ -15,8 +15,4 @@
 }
 
 $primary: #f8b319;
-$secondary: #00a5bf;
-$light: #e9edf3;
-$text-color: #333;
-
-$vertical-space: 0.5rem;
+$secondary: #e5e5e5;
