--- a/src/pages/homepage.scss
+++ b/src/pages/homepage.scss
@@ -1,1 +1,16 @@
 @import "../style/config";
+
+.homepage {
+  position: absolute;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  .content-container {
+    position: fixed;
+    width: 44%;
+  }
+}
