renamed chapter to menuItems

--- a/src/components/Timeline.scss
+++ b/src/components/Timeline.scss
@@ -9,7 +9,7 @@
   width: 50%;
   right: 0px;
   box-sizing: border-box;
-  .chapter {
+  .menuItems {
     margin-bottom: 5px;
     img {
       display: inline-block;
