--- a/src/components/Timeline.scss
+++ b/src/components/Timeline.scss
@@ -1,22 +1,29 @@
 @import "../style/config";
 
 .Timeline {
-  position: absolute;
+  position: relative;
+  left: 45%;
   padding: 20px;
   padding-left: 40px;
   padding-right: 10px;
   top: 0;
-  width: 50%;
+  width: 55%;
   right: 0px;
   box-sizing: border-box;
-  .menuItems {
-    margin-bottom: 5px;
-    img {
-      display: inline-block;
-      width: 100%;
-      margin: 0px;
-      padding: 0px;
-      margin-bottom: 5px;
+  // .menuItem {
+  //   margin-bottom: 5px;
+  //   img {
+  //     display: inline-block;
+  //     width: 100%;
+  //     margin: 0px;
+  //     padding: 0px;
+  //     margin-bottom: 5px;
+  //   }
+  // }
+  .scrolltest {
+    height: 2000px;
+    .test {
+      top: 50%;
     }
   }
 }
