--- a/src/pages/homepage.scss
+++ b/src/pages/homepage.scss
@@ -2,7 +2,8 @@
 
 .Homepage {
   // position: absolute;
-  padding: 20px;
+  padding: 15px;
+  padding-right: 0px;
   width: 100%;
   height: 100%;
   top: 0;
