basic styling to comply with scrollhandler

--- a/src/components/Timeline.scss
+++ b/src/components/Timeline.scss
@@ -3,7 +3,7 @@
 .Timeline {
   position: relative;
   left: 45%;
-  padding: 25px;
+  // padding: 25px;
   padding-left: 40px;
   padding-right: 0px;
   top: 0;
