--- a/src/pages/homepage.scss
+++ b/src/pages/homepage.scss
@@ -2,7 +2,7 @@
 
 .Homepage {
   // position: absolute;
-  padding: 15px;
+  // padding: 15px;
   padding-right: 0px;
   width: 100%;
   height: 100%;
