--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -1,12 +1,21 @@
 @import "../style/config";
 
 .MenuItem {
-  margin-bottom: 5px;
+  // margin-bottom: 5px;
+  padding-top: 25px;
+  padding-bottom: 500px;
+  &:not(:last-child) {
+    padding-bottom: 0;
+  }
+
   img {
-    display: inline-block;
+    display: block;
     width: 100%;
     margin: 0px;
     padding: 0px;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
+    &:not(:last-child) {
+      padding-bottom: 5px;
+    }
   }
 }
