--- a/src/components/Menubar.scss
+++ b/src/components/Menubar.scss
@@ -9,9 +9,10 @@
   padding-left: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
-
   font-family: nautikblack;
-  font-size: 25px;
+  font-size: 17pt;
+  // font-size: calc(20px + 6 * ((100vw - 320px) / 680));
+
   a {
     display: block;
     text-decoration: none;
@@ -27,4 +28,19 @@
     color: white;
   }
   // width: 50%;
+}
+
+@media only screen and (max-width: 600px) {
+  .menubar {
+    margin-bottom: 5%;
+    background-color: $primary;
+    // width: calc(70vw);
+    width: calc(100% - 25px);
+    margin-top: 10px;
+    margin-left: 10px;
+    padding-left: 5px;
+    padding-top: 8px;
+    padding-bottom: 5px;
+    font-size: 10pt;
+  }
 }
