--- a/src/components/Timeline.scss
+++ b/src/components/Timeline.scss
@@ -27,3 +27,18 @@
     }
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .Timeline {
+    position: relative;
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+    top: 50%;
+    left: 0;
+    // margin-top: 50%;
+    right: 0px;
+    box-sizing: border-box;
+    z-index: 0;
+  }
+}
