--- a/src/pages/homepage.scss
+++ b/src/pages/homepage.scss
@@ -5,7 +5,7 @@
   // padding: 15px;
   padding-right: 0px;
   width: 100%;
-  height: 100%;
+  // height: 100%;
   top: 0;
   left: 0;
   box-sizing: border-box;
@@ -13,5 +13,17 @@
   .menu-container {
     position: fixed;
     width: 44%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .Homepage {
+    .menu-container {
+      position: fixed;
+      width: 100%;
+      // height: 40%;
+      z-index: 100;
+      // background-color: $secondary;
+    }
   }
 }
