--- a/src/style/_config.scss
+++ b/src/style/_config.scss
@@ -14,5 +14,7 @@
   font-style: normal;
 }
 
-$primary: #f8b319;
-$secondary: #e5e5e5;
+$primary: rgba(248, 179, 25, 1);
+$secondary: rgba(229, 229, 229, 1);
+$primaryTrans: rgba(248, 179, 25, 0.95);
+$secondaryTrans: rgba(229, 229, 229, 0.9);
