--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,72 +1,99 @@
 @import "../style/config";
 .Footer {
-  min-width: 100vw;
-  min-height: 100vh;
   .Logo {
     position: fixed;
     width: 40%;
-    // max-width: 400px;
-    bottom: 15px;
-    right: 0;
-    z-index: 1000;
+    bottom: 10px;
+    right: 0px;
   }
 
-  .Booking {
+  .Links {
+    left: 25px;
+    bottom: 10px;
     position: fixed;
-    bottom: 20px;
-    left: 40px;
-    z-index: 1000;
-    width: 150px;
-    img {
-      width: 100%;
-      box-shadow: 10px 10px 5px #888888;
+    width: 100%;
+
+    .Booking {
+      img {
+        width: 13%;
+      }
     }
-  }
 
-  .SocialMedia {
-    position: fixed;
-    display: block;
-    bottom: 20px;
-    left: 210px;
-    z-index: 1000;
-    width: 70px;
-
-    img {
-      width: 50%;
-      display: block;
-      margin-bottom: 10px;
-      box-shadow: 0px 0px 0px #888888;
+    .SocialMedia {
+      position: absolute;
+      display: inline;
+      img {
+        position: relative;
+        width: 2.2vw;
+        margin-bottom: 10px;
+        margin-left: 10px;
+        display: block;
+      }
     }
   }
 }
 
 @media only screen and (max-width: 600px) {
   .Footer {
-    min-width: 100vw;
-    min-height: 100vh;
     .Logo {
       position: fixed;
       width: 65%;
-      // max-width: 400px;
-      bottom: 20px;
-      right: 15px;
-      z-index: 1000;
-    }
-
-    .Booking {
-      position: fixed;
       bottom: 10px;
-      left: 10px;
-      z-index: 1000;
-      width: 25%;
-      img {
-        width: 100%;
-        box-shadow: -3px 3px 5px #888888;
-      }
+      right: 15px;
     }
 
-    .SocialMedia {
-      visibility: hidden;
+    .Links {
+      left: 15px;
+
+      .Booking {
+        img {
+          width: 25%;
+        }
+      }
+
+      .SocialMedia {
+        visibility: hidden;
+      }
     }
   }
 }
+@media only screen and (max-height: 400px) and (orientation: landscape) {
+  .Footer {
+    .Logo {
+      position: fixed;
+      width: 45%;
+      bottom: 5px;
+      right: 5px;
+    }
+
+    .Links {
+      left: 15px;
+
+      .Booking {
+        visibility: hidden;
+      }
+
+      .SocialMedia {
+        visibility: hidden;
+      }
+    }
+  }
+}
+// @media only screen and (orientation: landscape) and (max-device-width: 750px) {
+//   .Footer {
+//     .Logo {
+//       position: fixed;
+//       width: 40%;
+//       bottom: 20px;
+//       right: 0px;
+//     }
+
+//     .Links {
+//       visibility: hidden;
+
+//       .SocialMedia {
+//         visibility: hidden;
+//       }
+//     }
+//   }
+// }
