--- a/src/components/Map.scss
+++ b/src/components/Map.scss
@@ -2,5 +2,18 @@
 
 .Mapbox {
   width: 100%;
-  height: 700px;
+  height: 50vh;
 }
+
+@media only screen and (max-width: 600px) {
+  .Mapbox {
+    visibility: hidden;
+  }
+}
+// @media only screen and (orientation: landscape) and (max-device-width: 750px) {
+//   .Mapbox {
+//     visibility: hidden;
+//     // width: 100%;
+//     // height: 80vh;
+//   }
+// }
