--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -1,7 +1,6 @@
 @import "../style/config";
 
 .MenuItem {
-  // margin-bottom: 5px;
   padding-top: 25px;
   padding-bottom: 500px;
   &:not(:last-child) {
@@ -26,7 +25,7 @@
     padding-top: 0px;
     padding-bottom: 500px;
     &:not(:last-child) {
-      padding-bottom: 25px;
+      padding-bottom: 150px;
     }
 
     img {
@@ -36,8 +35,10 @@
       padding: 0px;
       margin-bottom: 0px;
       &:not(:last-child) {
-        padding-bottom: 5px;
+        padding-bottom: 0px;
       }
     }
   }
+}
+@media only screen and (max-height: 400px) and (orientation: landscape) {
 }
