--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,6 +1,6 @@
 @import "../style/config";
 
-.Homepage {
+.Home {
   // position: absolute;
   // padding: 15px;
   padding-right: 0px;
@@ -17,13 +17,20 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .Homepage {
+  .Home {
     .menu-container {
       position: fixed;
       width: 100%;
-      // height: 40%;
-      z-index: 100;
-      // background-color: $secondary;
+      z-index: 999;
+    }
+  }
+}
+@media only screen and (max-height: 400px) and (orientation: landscape) {
+  .Home {
+    .menu-container {
+      position: fixed;
+      width: 55%;
+      z-index: 999;
     }
   }
 }
