Season picker active on landscape / all button absent when 'year' selected

--- a/src/components/SeasonPicker.scss
+++ b/src/components/SeasonPicker.scss
@@ -29,8 +29,8 @@
 
 @media only screen and (max-height: 400px) and (orientation: landscape) {
   .SeasonPicker {
-    position: fixed;
-    visibility: hidden;
-    bottom: 0;
+    // position: fixed;
+    // visibility: hidden;
+    // bottom: 0;
   }
 }
