--- a/src/components/BodyText.scss
+++ b/src/components/BodyText.scss
@@ -35,7 +35,9 @@
     margin-left: 10px;
     width: 85%;
     font-size: 7pt;
-    padding: 5px;
+    line-height: 97%;
+    padding-left: 5px;
+    padding-right: 10px;
     background-color: $secondaryTrans;
   }
 }
