--- a/src/components/Menubar.scss
+++ b/src/components/Menubar.scss
@@ -58,7 +58,8 @@
     margin-top: 10px;
     margin-left: 10px;
     padding: 5px;
-    font-size: 8pt;
+    font-size: 10pt;
+    line-height: 97%;
     a:hover {
       color: #666;
     }
