removed scrollbar when in season mode

--- a/src/components/Timeline.scss
+++ b/src/components/Timeline.scss
@@ -16,6 +16,8 @@
   width: 55%;
   right: 0px;
   box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: hidden;
   .scrolltest {
     height: 2000px;
     .test {
