added season styles

--- a/src/style/_config.scss
+++ b/src/style/_config.scss
@@ -18,3 +18,8 @@ $primary: rgba(248, 179, 25, 1);
 $secondary: rgba(229, 229, 229, 1);
 $primaryTrans: rgba(248, 179, 25, 0.95);
 $secondaryTrans: rgba(229, 229, 229, 0.9);
+
+$spring: #468840;
+$summer: #f37f12;
+$autumn: #eb4f18;
+$winter: #3379b2;
